   chroma conversion
 * New video output for Android platform, based on Surface
 * Support for 9/10bits output in the OpenGL output

Audio Output:
 * New audio output based on AudioQueue API for iOS
 * New audio output in memory (amem)
 * Important simplification and improvements in the core audio output
 * New audio output based on OpenSL ES API for Android

Video Filter:
 * New gradfun filter for debanding videos using dithering
 * Rewrite of the grain filter, faster and with better quality
 * New posterize filter for lowering the number of colors
 * Atmo ambilight: improve Fnordlicht up to 254 channels
 * New sepia filter for creating sepia effect in videos
 * New deinterlacer mode Phosphor, a framerate doubling CRT TV simulator
 * New deinterlacer mode IVTC, to do live inverse telecine for NTSC films
 * New subsdelay filter to change subtitles delay
 * New anti-flickering filter
 * New OpenMAX DL IPCS filter for color space conversion and resizing
 * Major improvements in the freetype text-rendering module, notably supporting
   blackbox and customizable shadow

Audio Filter:
 * New Compressor filter, a dynamic range compressor

Stream output:
 * New livehttp-module for HTTP Live Streaming (IETF draft) output
   example: vlc inputfile :sout="#transcode{vcodec=h264,acodec=mp3,
    venc=x264{profile=baseline},width=320,vb=256,ab=96}:std{
    access=livehttp{index=public_html/iphonestream.m3u8,
    index-url=http://url-to-iphonestreamfile-###.ts},mux=ts{use-key-frames},
    dst=public_html/iphonestreamfile-###.ts}"
 * RTP: support for Vorbis and Theora
 * Major rework of VoD support
 * New delay module, to introduce delays of one ES, when streaming:
       #delay{id=12,delay=500}:standard...
 * New setlang, setid modules to change lang or id of one ES, when streaming:
       #setid{id=12,new-id=42}:std...
 * New langfromtelx module, to change lang of one ES, when streaming, based on
   a telextex page: #langfromtelx{id=12,magazine=7,page=0x99,row=1}:std...